--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -119,9 +119,8 @@ img {
   display: flex;
   justify-content: center;
 
-  @media screen and (min-width: 1200px) {
-    justify-content: flex-start;
-  }
+
+
   &__link {
     display: inline-flex;
     align-items: center;
